[tool.poetry]
name = "test"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.10.11"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "foo"
url = "https://foo.bar/simple/"
priority = "explicit"
